# gnu-ed

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.in  NEWS  POSIX  README  THANKS  TODO  buf.c  buffer.c  carg_parser.c  carg_parser.h  configure  configure.in  ed.1  ed.h  ed.info  ed.texinfo  glbl.c  global.c  io.c  main.c  main_loop.c  re.c  regex.c  signal.c  sub.c  texinfo.tex  undo.c  version.c
.github/: CONTRIBUTING.md  SECURITY.md
doc/: ed.1  ed.info  ed.texi  ed.texinfo
test/: Makefile  README  ckscripts.sh  mkscripts.sh
testsuite/: README  a.ed  a.err  a.r  addr1.err  addr2.err  addr3.err  addr4.err  bang1.err  bang2.err  c.ed  c.r  c1.err  c2.err  check.sh  d.ed  d.err  d.r  e1.ed  e1.err  e2.ed  e2.err  e3.ed  e3.err  e4.ed  e4.err  e5.ed  f1.err  f2.err  filter.ed  filter.r  g.ed  g.r  g1.err  g2.err  g3.err  g4.err  h.err  i.ed  i.err  (+69 more)
