dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT(ed.h)

AC_LN_S
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_ISC_POSIX
AC_PROG_CC
AC_CONST
AC_STDC_HEADERS
AC_HAVE_HEADERS(limits.h memory.h string.h unistd.h)
AC_HAVE_FUNCS(setbuffer sigsetjmp sigaction strerror)
AC_VPRINTF
AC_ALLOCA
if test "$ALLOCA" = alloca.o; then
  AC_SUBST(LIBOBJS)LIBOBJS="$LIBOBJS xmalloc.o error.o"
fi

AC_OUTPUT(Makefile)


